<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unishare</string>
    <string name="logout_button">Logout</string>
    <string name="welcome">Benvenuti su Unishare!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">544445032329163</string>
    <string name="search_book_text">Inserisci il nome del libro o del corso che ti interessano:</string>
    <string name="search_book_hint">Nome del libro, ISBN o autore</string>
    <string name="search_button">Cerca</string>
    <string name="send_button">Invia</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="interesting_book">Premi per ricevere maggiori informazioni sul venditore</string>
    <string name="interesting_book_button">Mi interessa</string>
    <string name="title_activity_courses">Courses</string>
    <string name="search_course_text">Inserisci il nome del corso o del professore:</string>
    <string name="search_course_hint">Nome del corso o del professore</string>
    <string name="insert_opinion">Aggiungi un commento</string>
    <string name="insert_opinion_hint">Inserisci il tuo commento al corso</string>
    <string name="insert_rating_text">Assegna una valutazione al corso (da 1 a 5):</string>
    <string name="drawer_text">Unishare</string>
    <string name="return_button">Torna ad Unishare</string>
    <string name="sell_book_header">Compila i seguenti campi per mettere in vendita il tuo libro</string>
    <string name="book_title">Titolo:</string>
    <string name="book_author">Autore/i:</string>
    <string name="book_price">Prezzo:</string>
    <string name="sell_book_button">Metti in vendita</string>
    <string name="add_course">Il corso che cerchi non è presente? Aggiungilo</string>
    <string name="add">Aggiungi</string>
    <string name="add_course_header">Compila i seguenti campi per aggiungere un nuovo corso</string>
    <string name="course_name">Nome del corso:</string>
    <string name="professor">Professore:</string>
    <string name="language">Lingua:</string>
    <string name="cfu">CFU:</string>

    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="add_to_fav">Aggiungi ai corsi attuali</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="my_courses">Corsi Attuali</string>
    <string name="passed_courses">Corsi Superati</string>
    <string name="selling_books">Libri in vendita</string>
    <string name="requested_books">Libri Richiesti</string>
    <string name="add_to_passed">Aggiungi ai corsi superati</string>
    <string name="title_activity_course_support">CourseSupportActivity</string>
    <string name="delete_item">Elimina Corso</string>
    <string name="title_activity_my_books">MyBooksActivity</string>
    <string name="my_books">Libri in vendita</string>
    <string name="requests_header">Richieste Libro</string>
    <string name="passed_course">Inserisci fra i corsi superati</string>
    <string name="opinions">Opinioni sul Corso</string>
    <string name="files">Appunti disponibili</string>
    <string name="associated_books">Libri associati al Corso</string>
    <string name="course_files">Appunti disponibili</string>
    <string name="title_activity_files">FilesActivity</string>
    <string name="title_activity_mydata">MyDataActivity</string>
    <string name="search_files_text">Inserisci il nome del corso per trovare gli appunti associati:</string>
    <string name="search_file_hint">Nome del corso o degli appunti</string>
    <string name="associated_books_header">Libri Associati</string>
    <string name="title_activity_universi">UniversiActivity</string>
    <string name="remove_book">Rimuovi il libro</string>
    <string name="book_sold">Ho venduto il libro</string>
    <string name="see_requests">Vedi richieste</string>

</resources>
