<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.android.unishare.BooksActivity$PlaceholderFragment" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/libro"
        android:id="@+id/backgroundIcon"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/background_icon_margin2"
        android:paddingLeft="@dimen/background_icon_padding"
        android:paddingRight="@dimen/background_icon_padding"
        android:alpha="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/search_book_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/opinionText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/search_book_hint" >

                <requestFocus />
            </EditText>

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="@dimen/search_button_dim"
                android:layout_height="@dimen/search_button_dim"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:background="@null"
                android:src="@drawable/search_button"
                android:text="@string/search_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_header"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@color/Orange">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:text="Titolo libro"
                android:textColor="@color/WhiteSmoke"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:text="Autore"
                android:textColor="@color/WhiteSmoke"
                android:gravity="center"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_dropshadow" />

        <ListView
            android:id="@+id/ListView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingBottom="75dp">
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/buttonLayout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I miei libri"
            android:id="@+id/booksSold"
            android:layout_weight="1"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Richieste effettuate"
            android:id="@+id/booksRequested"
            android:layout_weight="1"/>



    </LinearLayout>

</RelativeLayout>